--- a/Machine_Learning/gbdt.html
+++ b/Machine_Learning/gbdt.html
@@ -81,10 +81,10 @@ $$<br />
 <h2 id="adaboost">从优化的角度来看Adaboost</h2>
 <p><strong>对于二分类问题,我们知道AdaBoost中的权重的迭代计算如下所示：</strong><br />
 $$<br />
-\begin{align<em>}<br />
+\begin{align}<br />
 u_{n}^{t+1}&amp;=u_{n}^{t}\cdot \lozenge t^{-y_ng_t(x_n)}\\<br />
 &amp;=u_{n}^{t}\cdot exp(-y_n\alpha_tg_t(x_n)<br />
-\end{align</em>}<br />
+\end{align}<br />
 $$<br />
 其中，对于incorrect样本，$y_ng_t(x_n)&lt;0$，对于correct样本，$y_ng_t(x_n)&lt;0$。从上式可以看出，$u_{n}^{t+1}$由$u_{n}^{t}$与某个常数相乘得到。所以，最后一轮更新的$u_{n}^{t+1}$可以写成$u_{n}^{1}$的级联形式，我们之前令$u_{n}^{1}=1/N$，则有如下推导:<br />
 $$<br />
@@ -142,7 +142,7 @@ $$<br />
 $$<br />
 然后对η求导，令$\frac{\partial \hat{E}_{ADA}}{\partial \eta}=0$，得：<br />
 $$<br />
-\eta_t=\sqrt{\frac{1-\epsilon <em t="t">{t}}{\epsilon </em>}}=\alpha_t<br />
+\eta_t=\sqrt{\frac{1-\epsilon_{t}}{\epsilon_{t}}}=\alpha_t<br />
 $$<br />
 由此看出，最大的步进长度就是$α_t$，即AdaBoost中计算$g_t$所占的权重。所以，AdaBoost算法所做的其实是在gradient descent上找到下降最快的方向和最大的步进长度。这里的方向就是$g_t$，它是一个函数，而步进长度就是$α_t$。也就是说，在AdaBoost中确定$g_t$和$α_t$的过程就相当于在gradient descent上寻找最快的下降方向和最大的步进长度。</p>
 <h2 id="gradient-boosting">Gradient Boosting</h2>
@@ -264,10 +264,10 @@ L(y,f(x))=(y-f(x))^2<br />
 $$<br />
 ​   第m步的损失为<br />
 $$<br />
-\begin{align<em>}<br />
-L\left (y,f_{m-1}(x)+T(x;\Theta_m)\right)&amp;=\left [y-f_{m-1}(x)-T(x;\Theta_m)\right]^2\<br />
+\begin{align}<br />
+L\left (y,f_{m-1}(x)+T(x;\Theta_m)\right)&amp;=\left [y-f_{m-1}(x)-T(x;\Theta_m)\right]^2\\<br />
 &amp;=[r-T(x;\Theta_m)]^2<br />
-\end{align</em>}<br />
+\end{align}<br />
 $$<br />
 ​   这里，<br />
 $$<br />
