--- a/Machine_Learning/recommend.html
+++ b/Machine_Learning/recommend.html
@@ -125,15 +125,50 @@
 </ol>
 <h2 id="_3">基于矩阵分解的算法</h2>
 <h3 id="svd">SVD分解</h3>
-<p>SVD的作用是将一个矩阵分解为三个矩阵相乘的形式。<br />
-|  | movie1 | movie2 | movie3 | movie4 |<br />
-| ------ | ------ | ------ | ------ | ------ |<br />
-| user1 | 1 |  |  |  |<br />
-| user2 | 2 |  |  | 3 |<br />
-| user3 |  | 5 | 4 |  |<br />
-| user4 | 2 |  |  | 4 |<br />
-空余处表示数据集中没有对应用户和电影的信息。如果我们想使用SVD，可以将空余处都填为0.假设此矩阵为R.那么运用SVD可以得到$R=UΣV^T$。~~如果我们只取前k个奇异值的话，就可以得到一个新的矩阵$R^{'}$，那么原来的空白处可能就不再为0，这就是对该user-moive对的预测。因为SVD有很多现成的算法，也不用迭代就可直接得到，所以使用比较方便。<br />
-但是我们会看到，上面方法有一个致命的缺陷，那就是将未知的评分全都设为0.这其实是极其不合理的，因为用户不给某个电影打分并不是很不喜欢（0分），而是有可能还没有看过这个电影。这样就加入了我们主观臆断的信息，最后造成错误。~~<br />
+<p>SVD的作用是将一个矩阵分解为三个矩阵相乘的形式。</p>
+<table>
+<thead>
+<tr>
+<th></th>
+<th>movie1</th>
+<th>movie2</th>
+<th>movie3</th>
+<th>movie4</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>user1</td>
+<td>1</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>user2</td>
+<td>2</td>
+<td></td>
+<td></td>
+<td>3</td>
+</tr>
+<tr>
+<td>user3</td>
+<td></td>
+<td>5</td>
+<td>4</td>
+<td></td>
+</tr>
+<tr>
+<td>user4</td>
+<td>2</td>
+<td></td>
+<td></td>
+<td>4</td>
+</tr>
+</tbody>
+</table>
+<p>空余处表示数据集中没有对应用户和电影的信息。如果我们想使用SVD，可以将空余处都填为0.假设此矩阵为R.那么运用SVD可以得到$R=UΣV^T$。 <del>如果我们只取前k个奇异值的话，就可以得到一个新的矩阵$R^{'}$，那么原来的空白处可能就不再为0，这就是对该user-moive对的预测。因为SVD有很多现成的算法，也不用迭代就可直接得到，所以使用比较方便。<br />
+但是我们会看到，上面方法有一个致命的缺陷，那就是将未知的评分全都设为0.这其实是极其不合理的，因为用户不给某个电影打分并不是很不喜欢（0分），而是有可能还没有看过这个电影。这样就加入了我们主观臆断的信息，最后造成错误。 </del><br />
 如果用0填充缺失值后做SVD分解，分解后相乘得到的新矩阵应该和原矩阵是接近的，缺失值处应该基本还是0。所以我的理解应该不太对，感觉SVD分解应该和隐因子分解本质是一样的，因为3个矩阵相乘$UΣV^T$也可以写成2个矩阵相乘$QP^T$的形式，无非就是$Q=UΣ$，然后用梯度下降法求解。</p>
 <h3 id="_4">基于隐因子的矩阵分解</h3>
 <h4 id="_5">基础的矩阵分解</h4>
