--- a/Machine_Learning/MLE.html
+++ b/Machine_Learning/MLE.html
@@ -5,7 +5,7 @@
     <link rel="Stylesheet" type="text/css" href="/wiki/static/css/tango.css">
     <link rel="shortcut icon" href="/wiki/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/wiki/favicon.ico" type="image/x-icon">
-    <title>关于这个wiki - zhanghongwei's personal knowledge wiki</title>
+    <title>最大似然 最大后验 贝叶斯估计 - zhanghongwei's personal knowledge wiki</title>
     <meta name="keywords" content="technology, machine learning, data mining"/>
     <meta name="description" content="A wiki website of zhanghongwei when I learned new knowledgy and technics."/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -35,10 +35,10 @@
 <div id="container">
     
 <div id="header">
-  <div id="post-nav"><a href="/wiki/">Home</a>&nbsp;»&nbsp;<a href="/wiki/#Machine_Learning">Machine_Learning</a>&nbsp;»&nbsp;关于这个wiki</div>
+  <div id="post-nav"><a href="/wiki/">Home</a>&nbsp;»&nbsp;<a href="/wiki/#Machine_Learning">Machine_Learning</a>&nbsp;»&nbsp;最大似然 最大后验 贝叶斯估计</div>
 </div>
 <div class="clearfix"></div>
-<div id="title">关于这个wiki</div>
+<div id="title">最大似然 最大后验 贝叶斯估计</div>
 <div id="content">
   <div class="toc"><span class="toctitle">Table of Contents</span><ul>
 <li><a href="#_1">最大似然估计</a></li>
@@ -83,7 +83,7 @@ $$<br />
 <script type="text/javascript">
 const gitment = new Gitment({
   id: '<%= page.date %>',
-  title: '关于这个wiki',
+  title: '最大似然 最大后验 贝叶斯估计',
   owner: '2kkkkk',
   repo: 'wiki',
   oauth: {
