--- a/Tools/Simiki_GithubPages.html
+++ b/Tools/Simiki_GithubPages.html
@@ -278,7 +278,7 @@ windows安装git：https://msysgit.github.com/</p>
 </pre></div>
 
 
-<p>3.将写好的md文件放进<code>content</code>文件夹下，然后命令行进入到<code>wiki</code>文件夹：<code>cd wiki</code>，执行脚本：<code>deploy heiheihei</code>（如果是第一次部署的话，需要先执行<code>deploy -i</code>,再执行<code>deploy heiheihei</code> ）</p>
+<p>3.将写好的md文件放进<code>content</code>文件夹下，然后命令行进入到<code>wiki</code>文件夹：<code>cd wiki</code>，执行脚本：<code>deploy heiheihei</code>(mac执行 <code>./deploy.sh heiheihei</code>)（如果是第一次部署的话，需要先执行<code>deploy -i</code>(因为需要先将gh-pages分支克隆到本地),再执行<code>deploy heiheihei</code> ）</p>
 </div>
 <div id="content-footer">created in <span class="create-date date"> 2018-06-27 00:00 </span></div>
 <div id="comments"></div>
